--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,5 +71,5 @@ jobs:
         script: |
           sudo docker login -u tikhomirovyacheslav -p 12367845asd
           sudo docker pull tikhomirovyacheslav/infra-actions
-          #sudo docker stop $(sudo docker ps -a -q)
+          sudo docker stop $(sudo docker ps -a -q)
           #sudo docker run --rm -d -p 5000:5000 tikhomirovyacheslav/infra-actions 
