--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,4 +72,4 @@ jobs:
           sudo docker login -u tikhomirovyacheslav -p 12367845asd
           sudo docker pull tikhomirovyacheslav/infra-actions
           sudo docker stop $(sudo docker ps -a -q)
-          #sudo docker run --rm -d -p 5000:5000 tikhomirovyacheslav/infra-actions 
+          sudo docker run --rm -d -p 5000:5000 tikhomirovyacheslav/infra-actions 
